# ctp2rs

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  agent.md
ctp-dyn/: CHANGELOG.md  Cargo.toml  README.md  build.rs
ctp-dyn/api/ctp/v6.7.11/v6.7.11_20250617_traderapi64_se_windows/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
ctp-dyn/api/ctp/v6.7.2/v6.7.2_20230913_api_traderapi64_se_windows/: error.xml
ctp-dyn/api/ctp/v6.7.2/v6.7.2_MacOS_20231016/: error.xml
ctp-dyn/api/ctp/v6.7.7/v6.7.7_20240607_traderapi64_se_windows/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
ctp-dyn/api/ctp/v6.7.8/20240918_traderapi64_se_windows/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  error.xml
ctp-dyn/api/ctp/v6.7.8/v6.7.8_20240918_api_traderapi_se_linux64/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
ctp-dyn/api/ctp/v6.7.9/20250319_traderapi64_se_windows/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
ctp-dyn/api/ctp/v6.7.9/v6.7.9_P1_20250319_api_traderapi_se_linux64/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
ctp-dyn/api/ctpsopt/v3.7.3/20240910_traderapi64_windows_se/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
ctp-dyn/api/ctpsopt/v3.7.3/v3.7.3_20240910_api_traderapi_linux64_se/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h  error.xml
ctp-dyn/api/mini/v1.6.9/CTPMini_V1.6.9_linux64_api_20240527/: ThostFtdcMdApi.h  ThostFtdcTraderApi.h
ctp-dyn/api/mini/v1.6.9/CTPMini_V1.6.9_win_api_20240527/win64/: ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
ctp-dyn/api/mini/v1.7.0/CTPIIMini_V1.7.0_linux64_api_20240923/: ThostFtdcTraderApi.h
ctp-dyn/api/mini/v1.7.0/CTPIIMini_V1.7.0_win_api_20240923/win64/: ThostFtdcMdApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
ctp-dyn/codegen/: errors.rs  mod.rs  parser.rs  setting.rs  stream.rs
ctp-dyn/src/: ffi.rs  lib.rs  wrapper.hpp
ctp-dyn/src/v1alpha1/: bindings.rs  builder.rs  event.rs  mdapi.rs  mdspi.rs  mod.rs  stream.rs  traderapi.rs  traderspi.rs
ctp-vt/: Cargo.toml
examples/channel/: Cargo.toml  README.md
examples/channel/src/: main.rs
examples/insecure/: Cargo.toml  README.md
examples/insecure/src/: main.rs
examples/localctp/: Cargo.toml  README.md  build.rs  localctp.config
examples/localctp/src/: lib.rs  localctp2.rs  localctpx.rs  main.rs  market_publisher.rs
examples/openctp/: Cargo.toml  README.md
examples/openctp/src/: apimd.rs  apitd.rs  main.rs
examples/openctp/tts/v6_7_2/mac_arm64/: thosttraderapi_se.dylib
examples/tts_sopt/: Cargo.toml  README.md
examples/tts_sopt/src/: apimd.rs  apitd.rs  main.rs
