[package]
name = "channel"
version = "0.1.0"
edition = "2021"

[dependencies]
ctp2rs = { path = "../../ctp-dyn/", optional = true }

log = "0.4.22"
dotenv = "0.15.0"
env_logger = "0.11.5"

[features]
default = ["ctp2rs", "ctp2rs/default"]
# Re-export dependency features so we can use `#[cfg(feature = "ctp_v6_7_11")]` locally
ctp_v6_7_11 = ["ctp2rs/ctp_v6_7_11"]
ctp_v6_7_2 = ["ctp2rs/ctp_v6_7_2"]
