[package]
name = "localctp"
version = "0.1.0"
edition = "2021"

[dependencies]
ctp2rs = { path = "../../ctp-dyn", optional = true }

log = "0.4.22"
dotenv = "0.15.0"
env_logger = "0.11.5"


rand = "0.8.5"
chrono = "0.4"
futures = "0.3.31"


tokio = { version = "1.42.0", features = ["full"] }
[features]
default = ["ctp2rs/default"]
