[package]
name = "openctp"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }

ctp2rs = { path = "../../ctp-dyn/", optional = true }

[features]
default = ["ctp2rs/openctp"]
ctp_v6_7_11 = ["ctp2rs/ctp_v6_7_11"]
ctp_v6_7_2 = ["ctp2rs/ctp_v6_7_2"]
